Added a malloc protect

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -1,6 +1,6 @@
 LIB_PHILO=./libphilo.a
 PHILO_MAIN=./main.c
-SRCS=atol.c ft_isspace.c ft_strlen.c philo_cluster.c stats.c thread_routine.c philo_methods.c timestamp.c philo_eat.c thread_monitor.c philo_health.c simulation.c logger.c philo_cluster_init.c philo_pthread.c
+SRCS=atol.c ft_isspace.c ft_strlen.c philo_cluster.c stats.c thread_routine.c philo_methods.c timestamp.c philo_eat.c thread_monitor.c philo_health.c simulation.c logger.c philo_cluster_init.c philo_pthread.c xmalloc.c
 OBJS=$(SRCS:%.c=%.o)
 NAME=./philo
 CC=cc
